--- a/src/main/webapp/login-form.html
+++ b/src/main/webapp/login-form.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Login Form:</h1>
 
-<form action="add" method="post">
+<form action="login" method="post">
     <p>Please enter username and password:</p>
 
     <label for="username">Username:</label>
