add global session attribute

--- a/src/main/webapp/login-form.html
+++ b/src/main/webapp/login-form.html
@@ -18,5 +18,15 @@
 
     <input type="submit" value="Submit" />
 </form>
+
+<form action="session" method="post">
+    <p>Enter your name:</p>
+
+    <label for="name">Name:</label>
+    <input type="name" name="name" />
+
+    <input type="submit" />
+</form>
+
 </body>
 </html>
